tests/fixtures/negative/code-style/ProhibitSuppressWarnings_SuppressSpecificRule.cls
// Violation: @SuppressWarnings annotation suppressing specific rule
@SuppressWarnings('PMD.UnusedLocalVariable')
public class Example2 {
    public void method() {
        int unused = 42;
    }
}

